[package]
name = "claudia-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web server
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
futures-util = "0.3"
tokio-tungstenite = "0.26"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Auth
bcrypt = "0.17"
argon2 = "0.5"
jsonwebtoken = "9"

# Utils
anyhow = "1"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
glob = "0.3"
base64 = "0.22"
uuid = { version = "1.6", features = ["v4", "serde"] }
walkdir = "2"
dirs = "5"
which = "7"
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
sha2 = "0.10"
zstd = "0.13"
